fix alignment on top

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: baseline;
+    margin: 0 100px;
 }
 
 a {
@@ -21,6 +22,7 @@ ul {
     display: flex;
     list-style-type: none;
     gap: 16px;
+    width: 600px;
 }
 
 .header {
@@ -32,6 +34,7 @@ ul {
     font-size: 24px;
     color: #f9faf8;
     font-weight: 700;
+    width: 400px;
 }
 
 .header-main {
